# jawsume

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jawsume/: __init__.py  jawsume.py
