[build-system]
requires      = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jawsume"
version = "0.0.1"
description = "Use AWSume in Jupyter"
readme = "README.md"
authors = [{ name = "Franz Diebold", email = "franz@diebold.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jupyter", "awsume", "aws"]
dependencies = [
    "awsume",
]
requires-python = ">=3.6"

    [project.optional-dependencies]
    build = ["build"]

    [project.urls]
    Homepage = "https://github.com/FranzDiebold/jawsume"
